Fixed the issue where the page was jumping when the navigation went sticky

--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -15,7 +15,7 @@
 }
 
 .padding-top-large {
-  padding-top: 10.5rem;
+  padding-top: 12rem;
 }
 
 .padding-top-mid {
